Sun Oct  5 10:51:06 2003  Tim Janik  <timj@gtk.org>

	* bseamplifier.c: fix property defaults.

Sun Oct  5 08:18:12 2003  Tim Janik  <timj@gtk.org>

	* bsetype.h (sfidl_pspec_Frequency): new pspec creator.

Sun Oct  5 07:00:40 2003  Tim Janik  <timj@gtk.org>

	* bseutils.[hc]: added balance property utility functions.
	
	* bsetype.h: added balance pspec creator.

Sat Oct  4 04:13:00 2003  Tim Janik  <timj@gtk.org>

	* bsecompat.c (bse_compat_rewrite_type_name): enter renamed
	object type names.

	* bseinstrumentinput.[hc]: implement BseInstrumentInput.
	* bsesubkeyboard.[hc]: removed.

	* bseinstrumentoutput.[hc]: implement BseInstrumentOutput.
	* bsesubinstrument.[hc]: removed.

	* bsemidiinput.[hc]: implement BseMidiInput.
	* bsemonokeyboard.[hc]: removed.
	
	* bsemidicontroller.[hc]: implement BseMidiController.
	* bsemidiicontroller.[hc]: removed.

	* bsecontainer.c (bse_container_add_item): when creating
	automatic names for modules, strip "Bse" namespace.

Sat Oct  4 03:00:03 2003  Tim Janik  <timj@gtk.org>

	* copied files in CVS repository for object renames:
	BseMonoKeyboard    -> BseMidiInput
	BseMidiIController -> BseMidiController
	BseSubKeyboard     -> BseInstrumentInput
	BseSubInstrument   -> BseInstrumentOutput

	* bsemidiinput.[hc]: copy of bsemonokeyboard.[hc].
	* bsemidicontroller.[hc]: copy of bsemidiicontroller.[hc].
	* bseinstrumentinput.[hc]: copy of bsesubkeyboard.[hc].
	* bseinstrumentoutput.[hc]: copy of bsesubinstrument.[hc].

Fri Oct  3 13:34:53 2003  Tim Janik  <timj@gtk.org>

	* bseproject.c (bse_project_dispose): stop and deactivate playing
	projects before attempting to dispose.

Fri Oct  3 07:37:37 2003  Tim Janik  <timj@gtk.org>

	* bsemidireceiver.cc (bse_midi_receiver_leave_farm): fix wrong assertion.

Sun Sep 21 04:42:33 2003  Tim Janik  <timj@gtk.org>

	* Makefile.am (libbseinclude_HEADERS): include bse.idl.

Tue Sep  9 05:22:07 2003  Tim Janik  <timj@gtk.org>

	* bsecxxutils.h: implemented binary-search templates.
