@@ -25,7 +25,7 @@ AUTHORS	= "Tim Janik <timj@gtk.org>";
 CRIGHTS = "Copyright (C) 2001-2002 Tim Janik";
 
 
-PROCEDURE (bse-error-name, "Utils/Error Name") {
+PROCEDURE (bse-error-name, "Error Name") {
   HELP	= "Retrieve the name of an error value";
   IN	= bse_param_spec_genum ("error", "Error", NULL,
 				BSE_TYPE_ERROR_TYPE, BSE_ERROR_NONE,
@@ -49,7 +49,7 @@ PROCEDURE (bse-error-name, "Utils/Error Name") {
   return BSE_ERROR_NONE;
 }
 
-PROCEDURE (bse-error-blurb, "Utils/Error Blurb") {
+PROCEDURE (bse-error-blurb, "Error Blurb") {
   HELP	= "Retrieve the description of an error value";
   IN	= bse_param_spec_genum ("error", "Error", NULL,
 				BSE_TYPE_ERROR_TYPE, BSE_ERROR_NONE,
