@@ -229,27 +229,27 @@ BSE_EXPORT_PROCEDURES = {
   { &type_id_clear_content, "BsePattern+clear-content",
     "Reset note and instrument contents", 0,
     clear_content_setup, clear_content_exec, NULL,
-    "/Method/BsePattern/Edit/Clear",
+    "/Methods/BsePattern/Edit/Clear",
   },
   { &type_id_random_fill, "BsePattern+random-fill",
     "Fill the selection with random notes", 0,
     random_fill_setup, random_fill_exec, NULL,
-    "/Method/BsePattern/Tools/Fill Random",
+    "/Methods/BsePattern/Tools/Fill Random",
   },
   { &type_id_select_invert, "BsePattern+select-invert",
     "Invert the selection", SELECT_INVERT,
     multi_select_setup, multi_select_exec, NULL,
-    "/Method/BsePattern/Select/Invert",
+    "/Methods/BsePattern/Select/Invert",
   },
   { &type_id_select_all, "BsePattern+select-all",
     "Select everything", SELECT_ALL,
     multi_select_setup, multi_select_exec, NULL,
-    "/Method/BsePattern/Select/All",
+    "/Methods/BsePattern/Select/All",
   },
   { &type_id_select_none, "BsePattern+select-none",
     "Unselect everything", SELECT_NONE,
     multi_select_setup, multi_select_exec, NULL,
-    "/Method/BsePattern/Select/None",
+    "/Methods/BsePattern/Select/None",
   },
   { NULL, },
 };
